- Improves NVRAM Management
  * NVRAM Entries (Emulated and Hardware) are fully cleared before new entries are made
- Improves Graphics Mode Selection
    * Eliminates unnecessary iteration over UGA/GOP modes when only one UGA/GOP instance exists
    * This improves loading speed.
- Extends Memory Management Fixes
  * Additional memory management improvements
- Renames Misc Configuration Tokens
    * The 'decline_XYZ' format will be used for options to disable divergent defaults
    * 'scan_other_esp' as 'decline_espfilter'
    * 'ignore_tag_help' as 'decline_tagshelp'
    * 'sync_apfs' as 'decline_apfssync' ('SyncAPFS' is now active by default)
    * 'supply_apfs' as 'decline_apfsload' ('SupplyAPFS' is now active by default)
    * 'silence_apfs' as 'decline_apfsmute' ('SilenceAPFS' is now active by default)


0.13.2.AG (03 Aug 2021):
-----------------------
- Adds 'TagHelp' Feature
  * Ensures HiddenTags can always be unhidden
  * This feature is active by default but can be disabled with the "disable_tag_help" token
- Fixes Banner Flicker During Load Sequence
  * Rationalises freeing the screen background image to reduce flickering at load time
  * Provides improved UX
- Fixes Filtering of Windows Secure Boot Certificates on Apple Firmware
  * Reverts Extension to Legacy Windows
  * This appeared to be linked to negative impacts on some Macs
- Fixes 'IgnoreVolumeICNS' and 'HideUI Badges' Implementation
  * Now extended to cover other volume types apart from 'internal' volumes
- Fixes Handling of "FirmwareBootNum" Entries
  * These were not loaded as expected
- Fixes Hangs Resulting from Changed Device Handles
  * RefindPlus hung on return from third party tools that change device handles, such as GDisk
  * RefindPlus now manages this situation
- Fixes Invalid 'Command Line Option Error' Notice on UEFI PC
  * Some UEFI PC appear to spontaneously generate invalid load options
  * These result in a halt and require one or more key presses to proceed