@@ -145,7 +145,7 @@ REFIT_CONFIG GlobalConfig = {
     /* SupplyAPFS = */ TRUE,
     /* SilenceAPFS = */ TRUE,
     /* SyncAPFS = */ TRUE,
-    /* ProtectNVRAM = */ FALSE,
+    /* ProtectNVRAM = */ TRUE,
     /* ScanAllESP = */ FALSE,
     /* HideTagsHelp = */ TRUE,
     /* NormaliseCSR = */ FALSE,
